@@ -53,7 +53,6 @@ import org.apache.solr.client.solrj.ResponseParser;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.V2RequestSupport;
 import org.apache.solr.client.solrj.embedded.SSLConfig;
 import org.apache.solr.client.solrj.impl.BaseHttpSolrClient.RemoteExecutionException;
 import org.apache.solr.client.solrj.impl.BaseHttpSolrClient.RemoteSolrException;
@@ -462,9 +461,10 @@ public class Http2SolrClient extends SolrClient {
   private static final Cancellable FAILED_MAKING_REQUEST_CANCELLABLE = () -> {};
 
   public Cancellable asyncRequest(
-      SolrRequest<?> solrReq, String collection, AsyncListener<NamedList<Object>> asyncListener) {
+      SolrRequest<?> solrRequest,
+      String collection,
+      AsyncListener<NamedList<Object>> asyncListener) {
     MDCCopyHelper mdcCopyHelper = new MDCCopyHelper();
-    SolrRequest<?> solrRequest = unwrapV2Request(solrReq);
 
     Request req;
     try {
@@ -521,7 +521,6 @@ public class Http2SolrClient extends SolrClient {
   public NamedList<Object> request(SolrRequest<?> solrRequest, String collection)
       throws SolrServerException, IOException {
 
-    solrRequest = unwrapV2Request(solrRequest);
     String url = getRequestPath(solrRequest, collection);
     Throwable abortCause = null;
     Request req = null;
@@ -632,17 +631,6 @@ public class Http2SolrClient extends SolrClient {
     URL oldURL = new URL(basePath);
     String newPath = oldURL.getPath().replaceFirst("/solr", "/api");
     return new URL(oldURL.getProtocol(), oldURL.getHost(), oldURL.getPort(), newPath).toString();
-  }
-
-  private SolrRequest<?> unwrapV2Request(SolrRequest<?> solrRequest) {
-    if (solrRequest.getBasePath() == null && serverBaseUrl == null)
-      throw new IllegalArgumentException("Destination node is not provided!");
-
-    if (solrRequest instanceof V2RequestSupport) {
-      return ((V2RequestSupport) solrRequest).getV2Request();
-    } else {
-      return solrRequest;
-    }
   }
 
   private String getRequestPath(SolrRequest<?> solrRequest, String collection)
